# Meta-Processing

./: README.md  environment.yml  install_env.sh  pyproject.toml  setup.py.ORIG
metaprocessing/meta_test/: dataset.py  eval.py  model.py  predict.py  train.py
metaprocessing/meta_train/: SeismicNShot.py  meta_dataset.py  train.py
scripts/: run_meta_test.sh  run_meta_train.sh
