[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-processing"
authors = [
    {name = "Shijun Cheng", email = "shijun.cheng@kaust.edu.sa"},
]
description = 'My project description.'
readme = "README.md"
requires-python = ">=3.8"
keywords = ['Meta-learning',
              'neural network',
              'multi-task seismic processing',]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies =['numpy >= 1.15.0',
                      'torch >= 1.2.0',
                      'pylops >= 1.17.0',]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}
